# spotify-podcast-rss

./: .flake8  README.md  TODO  pyproject.toml  setup.cfg
spr/: __init__.py  cli.py  config.py  engine.py  spr.py  wsgi.py
spr/html/: index.html
