[metadata]
name = spotify-podcast-rss
version = attr: spr.__version__
description = RSS for Spotify podcasts
long_description = file: README.md
author = Robert Huselius
author_email = robert@huseli.us
long_description_content_type = text/markdown
url = https://github.com/Eboreg/spotify-podcast-rss
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Sound/Audio

[options]
packages = spr
python_requires = >=3.6
install_requires =
    spotipy

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
    venv
ignore = F723,W504
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
known_self = spr
lines_after_imports = 2
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,SELF,LOCALFOLDER
skip = venv

[mypy]
follow_imports = skip
show_error_codes = True
ignore_missing_imports = True
files = spr/.
check_untyped_defs = true
